--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ОП.04 - ДЗ №1</title>
+  <title>ОП.04 - ДЗ №3</title>
 </head>
 <body>
-  <h1>ОП.04 - ДЗ №1</h1>
+  <h1>ОП.04 - ДЗ №3</h1>
 
   <p>
-    Это файл домашнего задания №1, которое выполнил студент/студентка <strong id="student">Зима Дмитрий Владимирович</strong> в рамках изучения дисциплины ОП.04 - Основы алгоритмизации и программирования.
+    Это файл домашнего задания №3, которое выполнил студент/студентка <strong id="student">ФИО</strong> в рамках изучения дисциплины ОП.04 - Основы алгоритмизации и программирования.
   </p>
 
   <script src="script.js"></script>
